build purchase license api
Former-commit-id: 5252729d3f68f84a035b2e2f367aaf6558665371 [formerly fff931e7cee48337501844e0135568cd5d59d25e] [formerly af7083f14828ba2223f35b6d2d863e5ca0b60bc9 [formerly cb2c715a9c2e351325e26192c2f09758e8d10040]]
Former-commit-id: 07c9bd5ad6390b4c440c5bbcd11f5746a70dbd02 [formerly 3fe64aeab937f12a7abf0e7cac5915a34989855a]
Former-commit-id: e7461fd5b386d72b7f11aae32e37ec410e18e023

--- a/templates/base.html
+++ b/templates/base.html
@@ -68,8 +68,11 @@
 
 <script type="text/javascript">
   // This identifies your website in the createToken call below
-  Stripe.setPublishableKey('pk_live_6Mj1A3QyWeLlvcN6FEeP0HXa');
-  console.log("stripe---------------------------------------------------------->")
+  // this is live mode
+  // Stripe.setPublishableKey('pk_live_6Mj1A3QyWeLlvcN6FEeP0HXa'); 
+  //*************************************************************************  
+  // this is test mode 
+  Stripe.setPublishableKey('pk_test_4Xa35zhZDqvXz1OzGRWaW4mX');
   // ...
 </script>
 
