Transaction must be functional in a new modal wizard , fix #1262
Former-commit-id: fddda1789df653430cd93c7dbf0f776212282855 [formerly c722445ac899b74262da8efafff8049d11c2313e] [formerly 4c961ff8e3f9820bfe3e858ab73b6f2c7859b95e [formerly e90ea9351139e75bac0a6e6b565baf0914fed501]]
Former-commit-id: 2cb543555cdc6150ee9ebf2f82b284a9b008f113 [formerly 7c00e0df4c2adeb891574cbf4e48a7ea57dfc782]
Former-commit-id: c2ba9cf384f33cf58b34a7f80be2bb155f1697b3

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -452,6 +452,13 @@
                       <div class="row">
                         <div class="col-md-12">
                           <button type="" class="btn green btn-block" ng-click="prepareToken()" id="prepareToken">Confirm Payment</button>
+                          <div class="row">
+                            <div class="col-md-5"></div>
+                            <div class="col-md-2"> <img src="/static/img/loading.gif"  ng-show="paymentOperation"/></div>
+                            <div class="col-md-5"></div>
+                          </div>
+                          
+                          <!--  -->
                         </div>                      
                     </div>                      
                     </form>
