Transaction must be functional in a new modal wizard part 2
Former-commit-id: c3356eab3ee2ecf08e02eb9441ad3fe350b7195e [formerly d2cf0819d14ff2a309b1af8cc5127fd9b64524ea] [formerly a1cfe932e0097b7b5ce75f3731a4a559aa5db4b9 [formerly f0eab80cdebafcc47a9a6f5298b3a133d42af34e]]
Former-commit-id: 5565b09e0aa3644ef27c32267f547006289df8b2 [formerly 30d4b36e6406188acd1772e94efd5f39862d79f2]
Former-commit-id: ff5e4797990bb5b0a414a71ef0690d28803b03b7

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -408,7 +408,7 @@
     font-size: 24px;
     /* margin-top: 40px; */
     text-align: center;
-  " align="center">Total Amout to be Paid</span></div><h3 style=" margin-top: 0px; margin-bottom: 40px; text-align: center; font-size: 40px; /* margin-top: 40px; */" class=""> $ 375</h3></div>
+  " align="center">Total Amout to be Paid</span></div><h3 style=" margin-top: 0px; margin-bottom: 40px; text-align: center; font-size: 40px; /* margin-top: 40px; */" class=""> $ <%= billing.total%></h3></div>
                                   
                     <h3 style=" margin-top: 0px; margin-bottom: 10px; text-align: center;" class="">Credit Card Details</h3>
                     <form class="ng-pristine ng-valid col-md-10 col-md-offset-1" style="/* padding: 59px; */" id="payment-form"  >
