working on list show on all pages
Former-commit-id: 4d88df8156fe1d3db8515162ec2268c9cac75e2b [formerly a1aca0fa3a60266186691a8f7eedb626c35cdbae] [formerly 32689bc6f9a4e3e1904d523a3b14d56ac50ec38b [formerly 7a5cdcf8f11523283af46a64e78ae67adca01952]]
Former-commit-id: 59e989af5669af7eddbefacb9fabc0fd58db8cfd [formerly 72dcbf1fedb4ce4cb12b488500a2ca9e075a0a05]
Former-commit-id: e711c198dd444a42a279c4af27d6237457a2fd8f

--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -197,6 +197,63 @@
     <div class="row">
       <div class="tab-pane">
       <div class="row">
+        <div class="col-md-12">
+            <div class="table-responsive showPage">
+                <table class="table">
+                <thead>
+                    <tr>
+                        <th>
+                        </th>
+                        <th>
+                         Logo
+                        </th>
+                        <th>
+                          Name
+                        </th>
+                        <th>
+                          Type
+                        </th>
+                        <th>
+                          Industry
+                        </th>
+                        <th>
+                          Last update
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="account in accounts" >
+                        <td>
+                          <input title="Select all Users" type="checkbox" ng-checked=" user.is_admin" ng-click="">
+                        </td>
+                        <td>
+                          <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">
+                            <img width="40" ng-hide="account.logo_img_id" alt="account.name" class="img-resonsive img-thumbnail" src="/static/img/default_company.png" >
+                            <img  width="40" ng-show="account.logo_img_id" alt="account.name" class="img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
+                          </a>
+                        </td>
+                        <td>
+                          <div class="nameContainer" style="max-width:210px">
+                            <a class="profile-link" href="/#/accounts/show/<%= account.id %>" style="max-width:210px">
+                              <span><%= account.name %></span>
+                            </a>
+                          </div>
+                        </td>
+                        <td>
+                          <a href="/#/search/type:Account <%=account.account_type%>"> <%= account.account_type %></a>
+                        </td>
+                        <td>
+                          <a href="/#/search/type:Account <%=account.industry%>">  <%= account.industry %>
+                          </a>
+                        </td>
+                        <td>
+                          <%=fromNow(account.updated_at)%>
+                        </td>
+                    </tr>
+                </tbody>
+                </table>
+            </div>
+        </div>
         <div class="col-md-12 waterfall" ng-hide="blankStateaccount">
             <div class="labelsCardElement cardElement" data-span="all" ng-show="showTagsFilter">
               <button type="button" class="close"  aria-hidden="true" ng-click="hideTagFilterCard()"></button>
