--- a/templates/base.html
+++ b/templates/base.html
@@ -459,9 +459,9 @@
 
 
 
-  var ROOT = '/_ah/api';
+ // var ROOT = '/_ah/api';
    
- //var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+ var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 
