working on sign-in and install chrome pages
Former-commit-id: 28fad99e4ed8e760619275d57655067c19bc42dc [formerly 3999c99cdf2d562461e059133521a2b1a303edc1] [formerly cff11046ae9f59303e0ab7386be1eeecf5b0a503 [formerly 165e9902f61ce2bce55968f65f033384f8a10e60]]
Former-commit-id: 88cd440110f14abee3603bbd0bdf719f92fbac4e [formerly 34a2d9ff4348a28e3d7c4388e16e9d2b1e147e35]
Former-commit-id: 2c900e6af7ea6d39b26824800319bb216c021f79

--- a/templates/new_web_site/chrome.html
+++ b/templates/new_web_site/chrome.html
@@ -260,8 +260,8 @@ function onSignInCallback(authResult) {
             </p>
             
             <div class="dropdown-wrapper">
-              <a class="dropdown-trigger" data-g-action="Download" data-g-event="Drive" data-g-label="Get Drive Everywhere" href="https://accounts.google.com/ServiceLogin?service=wise&amp;passive=true&amp;continue=http%3A//drive.google.com/%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive">
-              Install ioGrow Chrome Extension </a>
+              <a class="maia-button button-download download-mobile get-started" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni?utm_source=chrome-ntp-icon" style="display: inline-block;" target="_blank">
+            Install ioGrow Chrome extension</a>
             </div>
 
           </div>
