--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -137,7 +137,7 @@ var _gaq=_gaq||[];_gaq.push(["_cookiePathCopy","/a/"]);_gaq.push(["_cookiePathCo
                  With just one click you can automatically add a new lead from LinkedIn to ioGrow. No need to spend time on data entry. Focus on what matters: serving your customers and closing more deals.
               </p>
               <a class="maia-button button-download download-mobile get-started" href="https://accounts.google.com/ServiceLogin?service=wise&passive=true&continue=http%3A%2F%2Fdrive.google.com%2F%3Futm_source%3Den%26utm_medium%3Dbutton%26utm_campaign%3Dweb%26utm_content%3Dgotodrive%26usp%3Dgtd%26ltmpl%3Ddrive&urp=https%3A%2F%2Fwww.google.com%2Fdrive%2Fusing-drive%2F" style="display: inline-block;">
-            Download ioGrow Chrome extension</a>
+            Install ioGrow Chrome extension</a>
             </div>
           </div>
         </div>
