fix a little bug in assign license
Former-commit-id: a082b72bf827fabd822fd88cf46f268a76757ad2 [formerly 9ac48d2ee55b1f28756cd7ee0d2a04727bd330bb] [formerly 7de868b2defbf54508d0f085eda8730cd217ccce [formerly a96bf0771ccc7a721b08c5f8f62b1553b83b7966]]
Former-commit-id: 88063615a0f835ae818265bb389d3f4b385d62a1 [formerly 79abdc47ce6d0a190d974436ff13693271f8d5bc]
Former-commit-id: 081e8593a1d6621a6b5f82c1425d176c25a1b7ca

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -99,7 +99,7 @@
                  {{ _('Assign licenses')}}
               </span>
             </button>
-            <button ng-class="{disabled: selected_users.length==0}" title="Unassign licenses" class="btn btn-sm btn-default task_action" ng-click="reopenTask()">
+            <button ng-class="{disabled: selected_users.length==0}" title="Unassign licenses" class="btn btn-sm btn-default task_action" ng-click="unassignLicenses()">
                   <span class="btn-text">
                      {{ _('Unassign licenses')}}
                   </span>
