api for get tweet from flask is fixed
Former-commit-id: 15a2ec423403b3fc87a98b0c74a3154f94c90a77 [formerly 621b2b8111d52e9c49addbbba1a0c0ad1e5a85b2] [formerly aa63932e7a0a7a14634e6956097d46ca375ad94f [formerly 1ba2fe28669a0c047340181ed1cc2cd25b7b4972]]
Former-commit-id: fc4bda0b7f44627e3139dafb1c184743f861d837 [formerly b211c9dea7dc95d2bde23d680d6d37205af3182f]
Former-commit-id: 727fe6abd0d61f7ad01590b2efba2e58a5cad590

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -236,7 +236,7 @@
                 <div class="name">
 
                    <a href="/#/discovers/show/<%= tweet.id %>topic-*<%=tweet.topic %>" target="new" class="profile-link">
-                      <%= tweet.author_name %>
+                      <%= tweet.screen_name %>
                    </a>
                 </div>
                 
@@ -245,7 +245,7 @@
           <div class="textbody">
               <div class="pitch">
                 <a href="/#/discovers/show/<%= tweet.id %>topic-<%=tweet.topic %>" target="new"  >
-                <p  class="contact-title" ng-model="tweet.content" parse-url="props">
+                <p  class="contact-title"> <%=tweet.text%>
                 </p>
               </a>
               </div>
